@@ -15,21 +15,21 @@
   <parent>
     <artifactId>m2m.atl-parent</artifactId>
     <groupId>org.eclipse.m2m.atl</groupId>
-    <version>3.6.0-SNAPSHOT</version>
+    <version>4.0.0-SNAPSHOT</version>
      <relativePath>../../releng/org.eclipse.m2m.atl.releng.parent</relativePath>
   </parent>
   <groupId>org.eclipse.m2m.atl</groupId>
   <artifactId>org.eclipse.m2m.atl.tests</artifactId>
-  <version>3.6.0-SNAPSHOT</version>
+  <version>4.0.0-SNAPSHOT</version>
   <packaging>eclipse-test-plugin</packaging>
     
   <build>
     <plugins>
-     <plugin>
+      <plugin>
         <groupId>org.eclipse.tycho</groupId>
         <artifactId>tycho-source-plugin</artifactId>
       </plugin>
-  	<plugin>
+  	  <plugin>
 		<groupId>org.eclipse.tycho</groupId>
 		<artifactId>tycho-surefire-plugin</artifactId>
 		<version>${tycho-version}</version>
@@ -45,9 +45,10 @@
 			<useUIHarness>false</useUIHarness>
 			<useUIThread>false</useUIThread>
 			<argLine>-Xmx1024m</argLine>
-			<argLine>-XX:MaxPermSize=256m</argLine>			
+			<argLine>-ea</argLine>
+			<argLine>${tycho.testArgLine}</argLine>
 		</configuration>
-	</plugin>
+	  </plugin>
     </plugins>
   </build>
 </project>
